--- a/src/index.css
+++ b/src/index.css
@@ -206,4 +206,22 @@ h3 {
         justify-content: center;
         align-items: center;
     }
+    .contactContainer {
+        padding-top: 180px;
+    }
+    .contactContainer1 {
+        flex-direction: column;
+        height: fit-content;
+        width: 100%;
+    }
+    .contactContainer2 {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: fit-content;
+        margin-bottom: 20px;
+    }
+    .phone {
+        width: 50%;
+    }
 }
